# sycl_gen

./: .gitignore  AGENTS.md  BMG_B60_SPE.md  CLAUDE.md  LLM_ACCURACY_TEST_DESIGN.md  LLM_ACCURACY_TEST_GUIDE.md  LLM_FIX_COMPLETE_REPORT.sh  MinerU_markdown_oneapi_optimization-guide-gpu_2024.2-771772-824351_2031187955568545792.md  OPTIMIZATION_IMPLEMENTATION_COMPLETE.sh  PROJECT_COMPLETION.md  README.md  REFLECTION_STEP1.md  REFLECTION_STEP2_FINAL.md  TODO_TASKS.md  TOOLS_UPDATE_STATUS.txt  XMX.md  accuracy_integration_v4.py  batch_test_remaining.sh  compile.config  final_status_report.sh  fix_cuda_kernels.py  fix_cuda_kernels_include.sh  fix_headers_batch.sh  model.conf  model_config  model_config_enhanced.json  model_config_minimax.json  monitor_test_progress.sh  project_summary.sh  quick_fix_sycl.py  reference_sglang.md  run_agent_v3_batch.py  run_all_todo_tasks.sh  run_enhanced_agent.sh  run_extended_accuracy_test.py  run_fixed_accuracy_test.py  run_full_accuracy_tests.py  run_improved_accuracy_test.py  run_quick_accuracy_test.py  run_tests_background.sh  (+10 more)
.claude/commands/: sycl-builder.md
.opencode/: config.json
.opencode/plans/: ACCURACY_VERIFICATION_REPORT.py  AGENT_STANDARDS.md  AGENT_TASK_SPEC.md  AGENT_TASK_SPEC_TRACED.md  BATCH_WORKFLOW_V2.md  EXECUTION_PLAN.md  FINAL_ALL_HARNESSES.py  PHASE1_EXECUTION_LOG.md  PHASE1_REFLECTION.md  PHASE2_EXECUTION_LOG.md  PHASE3_EXECUTION_LOG.md  PHASES_1-4_FINAL_SUMMARY.py  PHASES_1-4_REFLECTION.md  README.md  TURBODIFFUSION_MIGRATION_SUMMARY.md  UNIFIED_AGENT_V3.md  all_harnesses_consolidated.py  apply_all_fixes.py  debug_phase5.py  example_prompts.md  final_verification.py  fix_false_positives.py  improvement1_parallel_tester.py  phase1_fixed_harnesses.py  phase2_improved_harnesses.py  phase3_real_accuracy_tester.py  phase4_plan.py  phase5_batch1_harnesses.py  phase5_batch2_harnesses.py  phase5_batch3_harnesses.py  phase5_batch_plan.py  phase5_final_report.py  quick_fixes.py  test_all_harnesses.py  test_phase5_batch1.py  turbodiffusion_migration_guide.md  turbodiffusion_migration_plan.md  verify_mae_zero.py  verify_mae_zero_v2.py  verify_phase5_batch1.py
benchmarks/: README.md  update_multi_dim_chart.py
benchmarks/charts/: README.md
benchmarks/results/: add_vectors_hnc_nhc_results.csv  add_vectors_results.csv  copy_type_converted_results.csv  expand_planes_nchw_results.csv  expand_planes_nhwc_results.csv  global_avg_pool_nhwc_fp16_results.csv  global_avg_pool_real_results.csv  hard_fused_kernel_results.csv  policy_map_results.csv  se_layer_nhwc_results.csv  softmax_real_results.csv  winograd_filter_transform_xmx_results.csv  winograd_input_transform_xmx_results.csv  winograd_output_relu_input_results.csv  winograd_real_results.csv
code/: generate_multidim_analysis.py  test_runner.py
compile_refer/: claude_skill_bmg_b60_docker_build.md  compile.optimization
config/: integrated_agent.json
conversion/winograd_input_transform/: generated_v1.dp.cpp
cuda-sycl-converter/: .gitignore  LICENSE  README.md  pyproject.toml
cuda-sycl-converter/docs/: CONVERSION_REPORT.md
cuda-sycl-converter/reports/: test_results_20260316_031743.json  test_results_20260316_032803.json
cuda-sycl-converter/scripts/: submit_to_github.sh
cuda-sycl-converter/tests/: test_runner.py
docs/: ACCURACY_TEST_ANALYSIS.md  ACCURACY_TEST_VERIFICATION_REPORT.sh  COMPLETION_REPORT.md  COMPLETION_REPORT_100_PERCENT.md  COMPLETION_SUMMARY_20260312.md  COMPREHENSIVE_OPTIMIZATION_REPORT.md  EXECUTION_SUMMARY_20260312.md  FINAL_ACHIEVEMENT_SUMMARY.txt  FINAL_DELIVERY_REPORT.md  FINAL_OPTIMIZATION_REPORT_10_KERNELS.md  FINAL_PERFORMANCE_REPORT.md  FINAL_PROJECT_REPORT.sh  FINAL_SUMMARY_19_KERNELS.md  GPU_OPTIMIZATION_GUIDE.md  OPTIMIZATION_PROGRESS.md  PROGRESS_REPORT_15_KERNELS.md  QUICK_REFERENCE.sh  SYSTEM_OVERVIEW.md  comprehensive_test_report.md
kernel_bench/benchmarks/: generate_all_charts.py
kernel_bench/docs/: ACCURACY_INTEGRATION_PLAN.md  ACCURACY_TEST_GUIDE.sh  ACHIEVEMENT_REPORT.md  AGENT_IMPROVEMENT_SUMMARY.sh  ENHANCED_AGENT_ARCHITECTURE.md  FINAL_OPTIMIZATION_REPORT_10_KERNELS.md  FINAL_REFLECTION.md  HARD_KERNEL_ANALYSIS.md  INTEGRATED_AGENT_GUIDE.md  LLM_DRIVEN_ACCURACY_REPORT.md  OPENCODE_INTEGRATION.md  (+1 more)
performance_optimization/: monitor.py  run_all_tests_parallel.sh
plan/: WORKFLOW.md
prompts/: phase2_reporter.md  phase3_converter.md
results/: EXPANSION_COMPLETE_10_KERNELS.json
test/: TEST_REPORT.md  sycl_bmg_test.cpp
tests/: batch_optimize_remaining.sh  batch_optimize_typeC.sh  batch_optimize_typeD.sh  run_small_scale_test.sh  test_add_bias_batched.cpp  test_expand_planes_fp16_nhwc.cpp  test_expand_planes_nchw.cpp  test_gemm_large.cpp  test_gemm_onednn.cpp  test_global_scale_fp16_nhwc.cpp  test_hard_batch_norm.cpp  test_hard_fused_kernel.cpp  test_layer_norm.cpp  test_nchw_to_nhwc.cpp  test_policy_map.cpp  test_se_layer_nhwc_xmx.cpp  test_softmax_real.cpp  test_softmax_v1.cpp  test_winograd_filter_transform.cpp  test_winograd_filter_transform_xmx.cpp  test_winograd_input.cpp  test_winograd_input_transform.cpp  test_xmx_joint_matrix.cpp
tools/: accuracy_verifier.py  async_test_executor.py  b60_sycl_builder.py  batch_convert.py  integrated_agent.py  llm_accuracy_test_agent.py  llm_driven_accuracy.py  model_config.py  remote_cuda_builder.sh  simple_test_runner.py  simplified_accuracy_tester.py  test_suite_generator.py
turbodiffusion/: README.md
turbodiffusion/sycl/bindings/: CMakeLists.txt  sycl_kernels.cpp
turbodiffusion/sycl/bindings/turbodiffusion_sycl/: __init__.py
(+914 files in other folders)
