[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cuda-sycl-harnesses"
version = "0.5.0"
description = "CUDA to SYCL kernel conversion test suite for LCZero chess engine"
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "flake8",
]

[project.scripts]
cuda-sycl-test = "tests.test_runner:main"

[project.urls]
Homepage = "https://github.com/yourusername/cuda-sycl-harnesses"
Documentation = "https://github.com/yourusername/cuda-sycl-harnesses/blob/main/docs/README.md"
Repository = "https://github.com/yourusername/cuda-sycl-harnesses.git"
Issues = "https://github.com/yourusername/cuda-sycl-harnesses/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "tests*"]
exclude = ["logs*", "reports*", "docs*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
